--- a/style/main.css
+++ b/style/main.css
@@ -57,7 +57,7 @@ header nav a:hover{
 
 .main-movie{
     font-size: 18px;
-    background: linear-gradient(rgb(41, 39, 39,.50),rgba(1,1,1,.50)100%) , url('/img/capa-Titanic.jpg');
+    background: linear-gradient(rgb(41, 39, 39,.50),rgba(1,1,1,.50)100%) , url('img/capa_Titanic.jpg');
 
     height: 45%;
     background-size: cover;
