--- a/style/responsive.css
+++ b/style/responsive.css
@@ -25,7 +25,7 @@
 
 @media (max-width:400px) {
     .main-movie{
-        background: linear-gradient(rgb(41, 39, 39,.50),rgba(1,1,1,.50)100%) , url('/img/capa-Titanic-mini.jpg');
+        background: linear-gradient(rgb(41, 39, 39,.50),rgba(1,1,1,.50)100%) , url('img/capa_Titanic_mini.jpg');
         height: 45%;
         background-size: cover;
     }
